--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/cpr_indoornav_jackal
-	previous = 
-	base = 5fcdfb5
+	previous = 5fcdfb5
+	base = 0153abb
 	trim = 
 	trimbase = 
