--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/cpr_indoornav_jackal
-	previous = 
-	base = 2385f42
+	previous = 2385f42
+	base = a7c6b24
 	trim = 
 	trimbase = 
