Imported upstream version '0.3.3' of 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ install(PROGRAMS
   scripts/environment
   scripts/install
   scripts/jackal_power_monitor
+  scripts/setup_docking
   scripts/start_jackal_bridge
 
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
