--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>cpr_indoornav_jackal</name>
-  <version>0.3.4</version>
+  <version>0.4.0</version>
   <description>Additional packages and scripts for running IndoorNav on the Jackal</description>
 
   <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
@@ -17,6 +17,7 @@
   <exec_depend>launch_delay</exec_depend>
   <exec_depend>microstrain_inertial_driver</exec_depend>
   <exec_depend>robot_upstart</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
   <exec_depend>topic_tools</exec_depend>
   <exec_depend>um7</exec_depend>
 
